--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; URL='https://www.udemy.com/course/telegram-bot-in-java/?couponCode=AB0F5486619C8C94FC8F'" />
     <title>Redirecting...</title>
-
+<script>(function(w,d,t,r,u){var f,n,i;w[u]=w[u]||[],f=function(){var o={ti:"97119310", enableAutoSpaTracking: true};o.q=w[u],w[u]=new UET(o),w[u].push("pageLoad")},n=d.createElement(t),n.src=r,n.async=1,n.onload=n.onreadystatechange=function(){var s=this.readyState;s&&s!=="loaded"&&s!=="complete"||(f(),n.onload=n.onreadystatechange=null)},i=d.getElementsByTagName(t)[0],i.parentNode.insertBefore(n,i)})(window,document,"script","//bat.bing.com/bat.js","uetq");</script>
 </head>
 <body>
     <p>If you are not redirected automatically, <a href="https://www.udemy.com/course/telegram-bot-in-java/?couponCode=AB0F5486619C8C94FC8F">click here</a>.</p>
